--- a/gemin-test/index.html
+++ b/gemin-test/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/middle-area.css">
     <link rel="stylesheet" href="css/middle-area-up.css">
     <link rel="stylesheet" href="css/middle-area-down.css">
+    <!-- Removed: <link rel="stylesheet" href="css/loading-animation.css"> Its content is now in middle-area-up.css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
